fix(Input): don't resize error icon on wrap

--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -47,6 +47,7 @@
       svg {
         height: 1.2rem;
         width: 1.2rem;
+        flex-shrink: 0;
 
         fill: themed('input-error-color');
       }
